# technotrack

./: .gitignore
03.10.16/: Doxyfile  Makefile  ez_common.h  ez_stack.h  onegin.c  string_funcs.c
03.10.16/tests/: test_stack.c
26.09.16/: input.txt  onegin  string_funcs  string_funcs.c
Akinator/: AkinatorDump.gv  CMakeLists.txt  Makefile  Tests  common.h  database.tree  main.c  tree.c  tree.h
Akinator/Tests/: TestDeserialize.txt  TestDump.gv  tests.c
CPU/: Makefile  common.h  cpu_arch.c  cpu_arch.h  cpu_header_gen.py  dizasm.c  dizasm.h  double_stack.c  double_stack.h  int_stack.c  int_stack.h  io.c  io.h  out.zasm  ptr_stack.c  ptr_stack.h  stack_gen.py  zasm.c  zasm.h  zcpu.c  zcpu.h
CPU/tests/: math.z  (+7 more)
Calculator/: Makefile  calc  calc.c
Compiler/: :w  Makefile  asm.c  common.h  hashmap.c  hashmap.h  io.c  io.h  lexer.c  lexer.h  rdp.c  rdp.h  simplifier.c  simplifier.h  stack.c  stack.h  translator.c  translator.h  tree.c  tree.h  vmarch.h  zasm.c  zcc.c  zlang.sh  ztdlib.c  ztdlib.h  zvm.c  zvm.h
Differentiator/: Makefile  article.c  article.h  common.c  common.h  diff.c  diff.h  io.c  io.h  main.c  rdp.c  rdp.h  tree.c  tree.h  treemath.c  treemath.h  treetex.c  treetex.h
ListsAndHashtables/: CMakeLists.txt  ListsAndHashtables  Tests  dumpster.c  dumpster.h  hash1.csv  hash2.csv  hash3.csv  hash4.csv  hash5.csv  hash_djb2.csv  hashmap.c  hashmap.h  list.c  list.h  main.c  onegin.txt  plot.gpi  test.h
ListsAndHashtables/dump/: hash.gv  map.gv
ListsAndHashtables/tests/: CMakeLists.txt  tests.c
SolveSquare/: input  input.c
Stack/: ez_common.h
(+56 files in other folders)
